syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__whitespace__2_restored.snap
---
source: syncdoc-migrate/src/tests/diff/whitespace.rs
expression: restored
---
//! Section representation for tree-sitter parsed documents.
//!
//! A section represents a hierarchical division of a document, typically
//! corresponding to a heading in markdown. Sections track their position
//! in the document tree through parent/child relationships and maintain
//! precise byte and line coordinates for content extraction and modification.

/// Hierarchical document division with precise coordinates for extraction and modification.
#[derive(Clone)]
pub struct Section {
    /// Section heading text without markup symbols.
    pub title: String,
}

/// What sort of hunk (syntactic diff atomic unit) it is.
#[derive(Clone)]
pub enum ChunkType {
    /// Only RHS exists
    Added,
    /// Only LHS exists
    Deleted,
}
