syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__whitespace__3_comparison.snap
---
source: syncdoc-migrate/src/tests/diff/whitespace.rs
expression: comparison
---
Original lines: 22
Restored lines: 22
Match: true
