syncdoc-migrate/src/tests/diff/snapshots/syncdoc_migrate__tests__diff__whitespace__integration_preserves_attributes.snap
---
source: syncdoc-migrate/src/tests/diff/whitespace.rs
expression: migrated
---
#[syncdoc::omnidoc]
#[derive(Debug, Clone)]
#[cfg(test)]
pub struct Test {
    pub field: i32,
}
